--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -18,17 +18,33 @@ body{
     display:flex;
     justify-content:center;
     align-items:center;
-    background:linear-gradient(135deg,#1a1a2e,#16213e,#0f3460);
-    color:white;
+    background:linear-gradient(-45deg,#0f2027,#203a43,#2c5364,#1a1a2e);
+    background-size:400% 400%;
+    animation:gradientBG 12s ease infinite;
     overflow:hidden;
+    color:white;
+}
+
+@keyframes gradientBG{
+    0%{background-position:0% 50%;}
+    50%{background-position:100% 50%;}
+    100%{background-position:0% 50%;}
+}
+
+.card{
+    backdrop-filter: blur(15px);
+    background: rgba(255,255,255,0.05);
+    padding:50px;
+    border-radius:20px;
+    width:85%;
+    max-width:800px;
+    text-align:center;
+    box-shadow:0 0 40px rgba(255,0,100,0.2);
+    animation:fadeIn 1.2s ease;
 }
 
 .page{
     display:none;
-    text-align:center;
-    padding:40px;
-    max-width:800px;
-    animation:fadeIn 1.5s ease-in-out;
 }
 
 .page.active{
@@ -36,39 +52,41 @@ body{
 }
 
 h1{
-    font-size:38px;
-    margin-bottom:20px;
+    font-size:40px;
+    margin-bottom:25px;
     color:#ff4d6d;
+    text-shadow:0 0 20px rgba(255,77,109,0.7);
 }
 
 p{
     font-size:20px;
-    line-height:1.8;
+    line-height:1.9;
+    opacity:0.95;
 }
 
 button{
-    margin-top:30px;
-    padding:10px 25px;
+    margin-top:35px;
+    padding:12px 28px;
     font-size:18px;
     border:none;
-    border-radius:25px;
-    background:#ff4d6d;
+    border-radius:30px;
+    background:linear-gradient(45deg,#ff4d6d,#ff1e4d);
     color:white;
     cursor:pointer;
     transition:0.3s;
+    box-shadow:0 0 20px rgba(255,0,100,0.4);
 }
 
 button:hover{
-    background:#ff1e4d;
-    transform:scale(1.05);
+    transform:scale(1.08);
+    box-shadow:0 0 35px rgba(255,0,100,0.8);
 }
 
 @keyframes fadeIn{
-    from{opacity:0;}
-    to{opacity:1;}
+    from{opacity:0; transform:translateY(20px);}
+    to{opacity:1; transform:translateY(0);}
 }
 
-/* Floating Hearts */
 .hearts{
     position:fixed;
     width:100%;
@@ -81,9 +99,7 @@ button:hover{
 
 .hearts span{
     position:absolute;
-    color:#ff4d6d;
-    font-size:20px;
-    animation:float 10s linear infinite;
+    animation:float 8s linear infinite;
 }
 
 @keyframes float{
@@ -98,30 +114,37 @@ button:hover{
 }
 </style>
 </head>
-
 <body>
 
+<!-- Background Music -->
+<audio id="bgMusic" loop>
+    <source src="song.mp3" type="audio/mpeg">
+</audio>
+
 <div class="hearts" id="hearts"></div>
+
+<div class="card">
 
 <!-- Page 1 -->
 <div class="page active">
 <h1>Happy Propose Day ❤️</h1>
 <p>
 Tmse milna meri kismat ho skti hai,<br>
-Tmse mohabaat hojana mere liye sahi waqt hoskta hai,<br>
-Tmhare mere saath rehna meri takat,<br>
-Aur tmhara hasta hua chehra dekhna meri aadat.
+Tmse mohabbat ho jana mere liye sahi waqt ho skta hai,<br>
+Tmhara mere saath rehna meri takat hai,<br>
+Aur tmhara hasta hua chehra dekhna meri aadat hai.
 </p>
-<button onclick="nextPage()">Next ❤️</button>
+<button onclick="startExperience()">Next ❤️</button>
 </div>
 
 <!-- Page 2 -->
 <div class="page">
 <p>
-Aajkal tmse baatein kaam hogyi hai,<br>
-Raat ko jaag ke tmhe pareshan krne wali adat bhi chali gyi hai,<br>
-Sab badal gya dheere dheere bss meri mohabbat reh gyi,<br>
-Jo deewana hai abhi bhi bss tmhari muskurahat ke pichhe.
+Aajkal tmse baatein thodi kam ho gayi hain,<br>
+Raat ko jaag kar tmhe pareshan krne wali aadat bhi chali gayi hai,<br>
+Sab badal gaya dheere dheere…<br>
+Bas meri mohabbat reh gayi,<br>
+Jo aaj bhi deewani hai sirf tmhari muskurahat ke pichhe.
 </p>
 <button onclick="nextPage()">Next ❤️</button>
 </div>
@@ -129,10 +152,11 @@ Jo deewana hai abhi bhi bss tmhari muskurahat ke pichhe.
 <!-- Page 3 -->
 <div class="page">
 <p>
-Waqt ni hai aajkal milne ko humare pass thik hai,<br>
-Jaha tut jaata hai lakho rishtey dur hojane se,<br>
-Waha humara pyaar tuta ni,<br>
-Bahut ruthe honge hum ek dusre se magar humne kabhi ek dusre ko chora ni.
+Waqt nahi mil pata milne ko, thik hai…<br>
+Jaha tut jaate hain lakho rishte dur hone se,<br>
+Waha hamara pyaar kabhi tuta nahi.<br>
+Ruthe zaroor honge hum ek dusre se,<br>
+Magar kabhi ek dusre ka haath chhoda nahi.
 </p>
 <button onclick="nextPage()">Next ❤️</button>
 </div>
@@ -140,12 +164,12 @@ Bahut ruthe honge hum ek dusre se magar humne kabhi ek dusre ko chora ni.
 <!-- Page 4 -->
 <div class="page">
 <p>
-Kitni toh pyaari lgti ho tm,<br>
-Kaun bolta hai jyada bolti ho,<br>
-Mein toh tmhari baatein humesha sunne ke liye taiyar hu,<br>
-Fir bhi mujhe pareshani ni hogi,<br>
-Bss muskura diya krna baatein krte hue,<br>
-Tb mere liye puri duniya bss tm hi hogi.
+Kitni pyaari lagti ho tum…<br>
+Kaun kehta hai tum zyada bolti ho?<br>
+Main toh tmhari har baat sunne ke liye hamesha taiyaar hoon.<br>
+Mujhe kabhi pareshani nahi hogi,<br>
+Bas yunhi muskura diya karo baatein karte hue,<br>
+Tab mere liye puri duniya sirf tum hi hogi.
 </p>
 <button onclick="nextPage()">Next ❤️</button>
 </div>
@@ -153,17 +177,30 @@ Tb mere liye puri duniya bss tm hi hogi.
 <!-- Page 5 -->
 <div class="page">
 <p>
-Mein tmhara intezaar krne ke liye taiyar hu,<br>
-Tm mujhse pyaar krti ho ye btane ki jarurat ni hai,<br>
-Bss apna haq jatate rehna,<br>
-Chahiye sab tmhare khilaf hojaye,<br>
-Hum aapke hi the, aapke hi rahenge,<br>
-Aur aapka saath humesha dete rahenge.
+Main tmhara intezaar karne ke liye taiyaar hoon,<br>
+Tum mujhse pyaar karti ho — yeh kehne ki zarurat nahi.<br>
+Bas apna haq jatate rehna,<br>
+Chahe sab tumhare khilaaf ho jaayein,<br>
+Hum tumhare hi the… tumhare hi rahenge,<br>
+Aur hamesha tumhara saath dete rahenge.
+</p>
+<button onclick="nextPage()">Next ❤️</button>
+</div>
+
+<!-- Page 6 -->
+<div class="page">
+<p>
+Hamare rishte ki rassi shayad thodi kamzor ho rahi hai,<br>
+Magar main use abhi bhi mazbooti se pakde baitha hoon.<br>
+Tum bas mera haath thaam lo,<br>
+Aur is rishte ko aur mazboot bana do.<br>
+Jis upar wale ne kabhi do ajnabi ko milaya tha,<br>
+Ab kiski himmat hai jo hume alag kar sake?
 </p>
 <button onclick="nextPage()">Final ❤️</button>
 </div>
 
-<!-- Final Page -->
+<!-- Final -->
 <div class="page">
 <h1>Subham ❤️ [Ladduuuu]</h1>
 <p>
@@ -172,7 +209,9 @@ Par har lafz mein tum thi,<br>
 Har ehsaas mein tum ho,<br>
 Aur har kal mein bhi sirf tum hi rahogi.
 </p>
-<h2 style="margin-top:25px;">Will you stay with me… always?</h2>
+<h2 style="margin-top:30px;">Will you stay with me… always?</h2>
+</div>
+
 </div>
 
 <script>
@@ -180,20 +219,28 @@ let currentPage = 0;
 const pages = document.querySelectorAll(".page");
 
 function nextPage(){
-    pages[currentPage].classList.remove("active");
-    currentPage++;
-    pages[currentPage].classList.add("active");
+    if(currentPage < pages.length - 1){
+        pages[currentPage].classList.remove("active");
+        currentPage++;
+        pages[currentPage].classList.add("active");
+    }
 }
 
-/* Generate floating hearts */
+// Start experience + music
+function startExperience(){
+    document.getElementById("bgMusic").play();
+    nextPage();
+}
+
+// Hearts animation
 function createHearts(){
     const hearts = document.getElementById("hearts");
-    for(let i=0;i<20;i++){
+    for(let i=0;i<30;i++){
         let heart = document.createElement("span");
         heart.innerHTML = "❤️";
         heart.style.left = Math.random()*100 + "vw";
-        heart.style.animationDuration = (5 + Math.random()*5) + "s";
         heart.style.fontSize = (15 + Math.random()*20) + "px";
+        heart.style.animationDuration = (4 + Math.random()*4) + "s";
         hearts.appendChild(heart);
     }
 }
@@ -202,3 +249,4 @@ createHearts();
 
 </body>
 </html>
+
