--- a/index.html
+++ b/index.html
@@ -4,261 +4,114 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Propose Day ❤️</title>
-
 <style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body{
-    height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:linear-gradient(-45deg,#0f2027,#203a43,#2c5364,#1a1a2e);
-    background-size:400% 400%;
-    animation:gradientBG 12s ease infinite;
-    overflow:hidden;
-    color:white;
-}
-
-@keyframes gradientBG{
-    0%{background-position:0% 50%;}
-    50%{background-position:100% 50%;}
-    100%{background-position:0% 50%;}
-}
-
-.card{
-    backdrop-filter: blur(15px);
-    background: rgba(255,255,255,0.05);
-    padding:50px;
-    border-radius:20px;
-    width:85%;
-    max-width:800px;
-    text-align:center;
-    box-shadow:0 0 40px rgba(255,0,100,0.2);
-    animation:fadeIn 1.2s ease;
-}
-
-.page{
-    display:none;
-}
-
-.page.active{
-    display:block;
-}
-
-h1{
-    font-size:40px;
-    margin-bottom:25px;
-    color:#ff4d6d;
-    text-shadow:0 0 20px rgba(255,77,109,0.7);
-}
-
-p{
-    font-size:20px;
-    line-height:1.9;
-    opacity:0.95;
-}
-
-button{
-    margin-top:35px;
-    padding:12px 28px;
-    font-size:18px;
-    border:none;
-    border-radius:30px;
-    background:linear-gradient(45deg,#ff4d6d,#ff1e4d);
-    color:white;
-    cursor:pointer;
-    transition:0.3s;
-    box-shadow:0 0 20px rgba(255,0,100,0.4);
-}
-
-button:hover{
-    transform:scale(1.08);
-    box-shadow:0 0 35px rgba(255,0,100,0.8);
-}
-
-@keyframes fadeIn{
-    from{opacity:0; transform:translateY(20px);}
-    to{opacity:1; transform:translateY(0);}
-}
-
-.hearts{
-    position:fixed;
-    width:100%;
-    height:100%;
-    top:0;
-    left:0;
-    pointer-events:none;
-    z-index:-1;
-}
-
-.hearts span{
-    position:absolute;
-    animation:float 8s linear infinite;
-}
-
-@keyframes float{
-    0%{
-        transform:translateY(100vh);
-        opacity:1;
-    }
-    100%{
-        transform:translateY(-10vh);
-        opacity:0;
-    }
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{height:100vh;display:flex;justify-content:center;align-items:center;background:linear-gradient(-45deg,#0f2027,#203a43,#2c5364,#1a1a2e);background-size:400% 400%;animation:gradientBG 15s ease infinite;overflow:hidden;color:white;}
+@keyframes gradientBG{0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
+.card{backdrop-filter: blur(20px);background: rgba(255,255,255,0.07);padding:50px;border-radius:25px;width:90%;max-width:850px;text-align:center;box-shadow:0 0 60px rgba(255,0,100,0.2);}
+.page{display:none;opacity:0;transform:translateY(30px);transition:1s;}
+.page.active{display:block;opacity:1;transform:translateY(0);}
+h1{font-size:42px;margin-bottom:25px;color:#ff4d6d;text-shadow:0 0 25px rgba(255,77,109,0.8);}
+p{font-size:21px;line-height:1.9;opacity:0.95;min-height:90px;}
+button{margin-top:35px;padding:14px 30px;font-size:18px;border:none;border-radius:30px;background:linear-gradient(45deg,#ff4d6d,#ff1e4d);color:white;cursor:pointer;transition:0.3s;box-shadow:0 0 25px rgba(255,0,100,0.4);}
+button:hover{transform:scale(1.08);box-shadow:0 0 40px rgba(255,0,100,0.8);}
+.hearts{position:fixed;width:100%;height:100%;top:0;left:0;pointer-events:none;z-index:-1;}
+.hearts span{position:absolute;animation:float 8s linear infinite;}
+@keyframes float{0%{transform:translateY(100vh);opacity:1;}100%{transform:translateY(-10vh);opacity:0;}}
 </style>
 </head>
 <body>
 
-<!-- Background Music -->
+<!-- Music -->
 <audio id="bgMusic" loop>
-    <source src="song.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
+  <source src="song.mp3" type="audio/mpeg">
+  Your browser does not support audio.
 </audio>
 
 <div class="hearts" id="hearts"></div>
 
 <div class="card">
 
-<!-- Page 1: Start Page -->
-<div class="page active">
+<!-- Pages -->
+<div class="page active" id="page0">
 <h1>Happy Propose Day ❤️</h1>
-<p>
-Click below to start your special surprise… ❤️
-</p>
-<button onclick="startExperience()">Start ❤️</button>
+<p>Click below to start your special surprise… ❤️</p>
+<button id="startBtn">Start ❤️</button>
 </div>
 
-<!-- Page 2 -->
-<div class="page">
-<p>
-Tmse milna meri kismat ho skti hai,<br>
-Tmse mohabbat ho jana mere liye sahi waqt ho skta hai,<br>
-Tmhara mere saath rehna meri takat hai,<br>
-Aur tmhara hasta hua chehra dekhna meri aadat hai.
-</p>
-<button onclick="nextPage()">Next ❤️</button>
-</div>
-
-<!-- Page 3 -->
-<div class="page">
-<p>
-Aajkal tmse baatein thodi kam ho gayi hain,<br>
-Raat ko jaag kar tmhe pareshan krne wali aadat bhi chali gayi hai,<br>
-Sab badal gaya dheere dheere…<br>
-Bas meri mohabbat reh gayi,<br>
-Jo aaj bhi deewani hai sirf tmhari muskurahat ke pichhe.
-</p>
-<button onclick="nextPage()">Next ❤️</button>
-</div>
-
-<!-- Page 4 -->
-<div class="page">
-<p>
-Waqt nahi mil pata milne ko, thik hai…<br>
-Jaha tut jaate hain lakho rishte dur hone se,<br>
-Waha hamara pyaar kabhi tuta nahi.<br>
-Ruthe zaroor honge hum ek dusre se,<br>
-Magar kabhi ek dusre ka haath chhoda nahi.
-</p>
-<button onclick="nextPage()">Next ❤️</button>
-</div>
-
-<!-- Page 5 -->
-<div class="page">
-<p>
-Kitni pyaari lagti ho tum…<br>
-Kaun kehta hai tum zyada bolti ho?<br>
-Main toh tmhari har baat sunne ke liye hamesha taiyaar hoon.<br>
-Mujhe kabhi pareshani nahi hogi,<br>
-Bas yunhi muskura diya karo baatein karte hue,<br>
-Tab mere liye puri duniya sirf tum hi hogi.
-</p>
-<button onclick="nextPage()">Next ❤️</button>
-</div>
-
-<!-- Page 6 -->
-<div class="page">
-<p>
-Main tmhara intezaar karne ke liye taiyaar hoon,<br>
-Tum mujhse pyaar karti ho — yeh kehne ki zarurat nahi.<br>
-Bas apna haq jatate rehna,<br>
-Chahe sab tumhare khilaaf ho jaayein,<br>
-Hum tumhare hi the… tumhare hi rahenge,<br>
-Aur hamesha tumhara saath dete rahenge.
-</p>
-<button onclick="nextPage()">Next ❤️</button>
-</div>
-
-<!-- Page 7 -->
-<div class="page">
-<p>
-Hamare rishte ki rassi shayad thodi kamzor ho rahi hai,<br>
-Magar main use abhi bhi mazbooti se pakde baitha hoon.<br>
-Tum bas mera haath thaam lo,<br>
-Aur is rishte ko aur mazboot bana do.<br>
-Jis upar wale ne kabhi do ajnabi ko milaya tha,<br>
-Ab kiski himmat hai jo hume alag kar sake?
-</p>
-<button onclick="nextPage()">Final ❤️</button>
-</div>
-
-<!-- Final Page -->
-<div class="page">
-<h1>Budhu ❤️ Ladduuuu</h1>
-<p>
-Shayad maine seedha "I Love You" nahi bola…<br><br>
-Par har lafz mein tum thi,<br>
-Har ehsaas mein tum ho,<br>
-Aur har kal mein bhi sirf tum hi rahogi.
-</p>
+<div class="page" id="page1"><p></p><button onclick="nextPage()">Next ❤️</button></div>
+<div class="page" id="page2"><p></p><button onclick="nextPage()">Next ❤️</button></div>
+<div class="page" id="page3"><p></p><button onclick="nextPage()">Next ❤️</button></div>
+<div class="page" id="page4"><p></p><button onclick="nextPage()">Next ❤️</button></div>
+<div class="page" id="page5"><p></p><button onclick="nextPage()">Next ❤️</button></div>
+<div class="page" id="page6"><p></p><button onclick="nextPage()">Final ❤️</button></div>
+<div class="page" id="page7">
+<h1>Subham ❤️ [Ladduuuu]</h1>
+<p>Shayad maine seedha "I Love You" nahi bola…<br>Par har lafz mein tum thi,<br>Har ehsaas mein tum ho,<br>Aur har kal mein bhi sirf tum hi rahogi.</p>
 <h2 style="margin-top:30px;">Will you stay with me… always?</h2>
 </div>
 
 </div>
 
 <script>
+// Shayari array
+const shayari = [
+"Tmse milna meri kismat ho skti hai,<br>Tmse mohabbat ho jana mere liye sahi waqt ho skta hai,<br>Tmhara mere saath rehna meri takat hai,<br>Aur tmhara hasta hua chehra dekhna meri aadat hai.",
+"Aajkal tmse baatein thodi kam ho gayi hain,<br>Raat ko jaag kar tmhe pareshan krne wali aadat bhi chali gayi hai,<br>Sab badal gaya dheere dheere…<br>Bas meri mohabbat reh gayi,<br>Jo aaj bhi deewani hai sirf tmhari muskurahat ke pichhe.",
+"Waqt nahi mil pata milne ko, thik hai…<br>Jaha tut jaate hain lakho rishte dur hone se,<br>Waha hamara pyaar kabhi tuta nahi.<br>Ruthe zaroor honge hum ek dusre se,<br>Magar kabhi ek dusre ka haath chhoda nahi.",
+"Kitni pyaari lagti ho tum…<br>Kaun kehta hai tum zyada bolti ho?<br>Main toh tmhari har baat sunne ke liye hamesha taiyaar hoon.<br>Mujhe kabhi pareshani nahi hogi,<br>Bas yunhi muskura diya karo baatein karte hue,<br>Tab mere liye puri duniya sirf tum hi hogi.",
+"Main tmhara intezaar karne ke liye taiyaar hoon,<br>Tum mujhse pyaar karti ho — yeh kehne ki zarurat nahi.<br>Bas apna haq jatate rehna,<br>Chahe sab tumhare khilaaf ho jaayein,<br>Hum tumhare hi the… tumhare hi rahenge,<br>Aur hamesha tumhara saath dete rahenge.",
+"Hamare rishte ki rassi shayad thodi kamzor ho rahi hai,<br>Magar main use abhi bhi mazbooti se pakde baitha hoon.<br>Tum bas mera haath thaam lo,<br>Aur is rishte ko aur mazboot bana do.<br>Jis upar wale ne kabhi do ajnabi ko milaya tha,<br>Ab kiski himmat hai jo hume alag kar sake?"
+];
+
 let currentPage = 0;
 const pages = document.querySelectorAll(".page");
+const music = document.getElementById("bgMusic");
 
+// Typewriter effect
+function typeWriter(text, element, speed=40){
+    let i = 0;
+    element.innerHTML = "";
+    function type(){
+        if(i < text.length){
+            element.innerHTML += text.charAt(i);
+            i++;
+            setTimeout(type, speed);
+        }
+    }
+    type();
+}
+
+// Next page
 function nextPage(){
-    if(currentPage < pages.length - 1){
+    if(currentPage < pages.length-1){
         pages[currentPage].classList.remove("active");
         currentPage++;
+        const p = pages[currentPage].querySelector("p");
+        if(p && shayari[currentPage-1]) typeWriter(shayari[currentPage-1], p);
         pages[currentPage].classList.add("active");
     }
 }
 
-function startExperience(){
-    const music = document.getElementById("bgMusic");
-    music.play().then(()=>{
-        nextPage();
-    }).catch(()=>{
-        alert("Click anywhere on the page to start music");
-    });
-}
+// Start button
+document.getElementById("startBtn").addEventListener("click", ()=>{
+    music.play().catch(()=>alert("Click to start the music!"));
+    nextPage();
+});
 
 // Floating hearts
 function createHearts(){
     const hearts = document.getElementById("hearts");
-    for(let i=0;i<30;i++){
+    for(let i=0;i<40;i++){
         let heart = document.createElement("span");
         heart.innerHTML = "❤️";
         heart.style.left = Math.random()*100 + "vw";
-        heart.style.fontSize = (15 + Math.random()*20) + "px";
+        heart.style.fontSize = (15 + Math.random()*25) + "px";
         heart.style.animationDuration = (4 + Math.random()*4) + "s";
         hearts.appendChild(heart);
     }
 }
 createHearts();
 </script>
-
 </body>
 </html>
-
