Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ button:hover{transform:scale(1.08);box-shadow:0 0 40px rgba(255,0,100,0.8);}
 <body>
 
 <!-- Background Music -->
-<audio id="bgMusic" loop muted>
+<audio id="bgMusic" loop >
   <source src="song.mp3" type="audio/mpeg">
   Your browser does not support audio.
 </audio>
@@ -60,7 +60,7 @@ button:hover{transform:scale(1.08);box-shadow:0 0 40px rgba(255,0,100,0.8);}
 <div class="page" id="page6"><p></p><button onclick="nextPage()">Final ❤️</button></div>
 
 <div class="page" id="page7">
-<h1>Subham ❤️ [Ladduuuu]</h1>
+<h1>Budhuuuu ❤️ Ladduuuu</h1>
 <p>Shayad maine seedha "I Love You" nahi bola…<br>Par har lafz mein tum thi,<br>Har ehsaas mein tum ho,<br>Aur har kal mein bhi sirf tum hi rahogi.</p>
 <h2 style="margin-top:30px;">Will you stay with me… always?</h2>
 </div>
@@ -130,3 +130,4 @@ createHearts();
 </script>
 </body>
 </html>
+
